add weather icons

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	
 	<header class="main-header">
 		<p class="logo">FCC-W-A</p>
 		<div class="toogle-icon">
-			<a href="#" class="btn">F</a>
-			<a href="#" class="btn">C</a>
+			<a href="#" class="btn">Temp in °F</a>
+			<a href="#" class="btn">Temp in °C</a>
 		</div>
 	</header>
+
 	<div class="app-container">
 
 		<h1>FCC Weather App</h1>
 		<p id="location"></p>
-		<p id="temperature">temperature</p>
-		<p id="weather-description">cloudly</p>
-		<p id="icon">icon</p>
+		<p id="temperature"></p>
+		<p id="weather-description"></p>
+		<p id="icon"></p>
 
 	</div>
 	
